<resources>
    <string name="app_name">Task Manager</string>
    <string name="add_task">Add task</string>
    <string name="button_cancel">Exit</string>
    <string name="button_save_task">Save</string>
    <string name="comment_task">Comment</string>
    <string name="enter_task">Title</string>
    <string name="create_new_task">Create task</string>
    <string name="action_add">add to listView</string>
    <string name="task_started">Task started</string>
    <string name="task_finished">Task finished</string>
    <string name="empty_fields">You have empty fields</string>
    <string name="task">Task #</string>
    <string name="comment">Comment #</string>
    <string name="new_task_added">New tasks were added</string>
    <string name="undo">UNDO</string>
    <string name="sort_a_z">A-Z</string>
    <string name="sort_z_a">Z-A</string>
    <string name="sort_item">Sort item</string>
    <string name="label_main_activity_current_tasks">Current tasks</string>
    <string name="action_title_menu_spinner">Setting</string>
    <string name="acton_title_delete_listView">Delete</string>
    <string name="action_title_exit">Exit</string>
    <string name="action_title_generate_tasks">Generate</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_title_setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
